# WaveLab

./: CMakeLists.txt  README.md
src/: ImguiStyles.h  README.md  WaveLab.cpp
src/engine/: README.md  Vec3.h
src/engine/group/: Group.cpp  Group.h  Polytope.cpp  Polytope.h
src/engine/model/: Model.cpp  Model.h
src/engine/opengl/buffer/: Buffer.h  FrameBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/engine/opengl/glsl/: fragment_shader.glsl  phong_fragment.glsl  phong_vertex.glsl  vertex_shader.glsl
src/engine/opengl/shader/: Shader.cpp  Shader.h
src/engine/renderer/: Camera.cpp  Camera.h  Light.cpp  Light.h  Renderer.cpp  Renderer.h  TextureRenderer.h  TrackballCamera.cpp  TrackballCamera.h
src/engine/texture/: Texture.cpp  Texture.h
src/engine/window/: Window.cpp  Window.h
src/group/: Group.cpp  Group.h  Polytope.cpp  Polytope.h
src/opengl/: README.md
src/opengl/buffer/: Buffer.h  FrameBuffer.h  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/opengl/glsl/: vertex_shader.glsl
src/opengl/shader/: Shader.cpp  Shader.h
src/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  TextureRenderer.h
src/window/: Window.cpp  Window.h
